# miraust_rs

./: Cargo.toml  README.md
example/jni_test/: Cargo.toml
example/jni_test/src/: lib.rs
miraust_api/: Cargo.toml  build.rs
miraust_api/src/: lib.rs  managed.rs
miraust_api/src/bot/: mod.rs
miraust_api/src/contact/: friend.rs  group.rs  member.rs  mod.rs  stranger.rs
miraust_api/src/event/: friend.rs  group.rs  group_event.rs  listener.rs  message_event.rs  mod.rs
miraust_api/src/jni_struct/: mod.rs
miraust_api/src/message/: builder.rs  chain.rs  mod.rs  single.rs
miraust_api/src/plugin/: mod.rs
miraust_core/: Cargo.toml
miraust_core/src/: lib.rs  managed.rs  plugin.rs  plugin_loader.rs  plugin_manager.rs  test.rs
miraust_core/src/api/: bot.rs  contact.rs  event.rs  listener.rs  message.rs  mod.rs
miraust_core/src/api/message/: chain.rs  mod.rs
miraust_core/src/bot/: mod.rs
miraust_core/src/contact/: friend.rs  group.rs  mod.rs  stranger.rs
miraust_core/src/event/: mod.rs
miraust_core/src/jni_ffi/: jni_callback.rs  jni_loader.rs  mod.rs  thread_pool.rs
miraust_core/src/message/: chain.rs  mod.rs  single.rs
plugin_example/: Cargo.toml  build.rs
plugin_example/src/: lib.rs
src/: event.rs  jni_callback.rs  jni_loader.rs  lib.rs  plugin.rs  plugin_loader.rs  test.rs
src/api/: bot.rs
src/bot/: bot.rs
src/c_api/: bot.rs  mod.rs
src/contact/: friend.rs  mod.rs
src/jni_ffi/: jni_callback.rs  jni_loader.rs  mod.rs  thread_pool.rs
