[package]
name = "miraust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0"
libloading = "0"
lazy_static = "1"

[lib]
#path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[workspace]
members = [
    "example/jni_test",
]