[package]
name = "miraust_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0"
libloading = "0"
crossbeam = "0"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
#lazy_static = "1"

[lib]
#path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[profile.release]
panic = "abort"
lto = true
debug = false
opt-level = 3
incremental = false
strip = true
codegen-units = 1