[package]
name = "plugin_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miraust_api = { path = "../miraust_api" }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
debug = false
opt-level = 3
incremental = false
strip = true
codegen-units = 1